--- a/link.html
+++ b/link.html
@@ -25,7 +25,7 @@
 		提交前请在您的网站首页添加本站链接<br/>
 		不定期抽查，如发现未做本站链接将立即删除<br/>
 		贵站如有弹窗请勿提交，提交也不会被收录<br/>
-         链接：http://361.info.tm/  名称：蓝色导航</p></br>
+         链接：http://2.ae3.info/  名称：蓝色导航</p></br>
 		<li>
 	<form method=post action="/link.html">
     &nbsp;&nbsp;&nbsp;网站名称：<input class="int" type="text" name="title"><br>
