--- a/link.html
+++ b/link.html
@@ -17,7 +17,7 @@
 												<strong><a href="notice.html" target="_self"><font color="#ffffff">网站公告</font></a></strong>
 																																																										</div>
 			<div class="gonggao">
-	<marquee scrollamount="6" behavior="right">蓝色导航旗下所有网站均支持手机版、别忘了收藏蓝色导航最新地址发布邮箱：6dizhi@gmail.com</marquee>
+	<marquee scrollamount="6" behavior="right">蓝色导航绿色无广告，近期出现无耻人渣剽窃山寨，挂病毒木马，虚假广告的假站，与本站无关。本站地址发布邮箱：6dizhi@gmail.com</marquee>
 	</div>    <div class="lyneirong">
 	    <div class="navlink">
 		<ul>
