--- a/ad.html
+++ b/ad.html
@@ -20,18 +20,28 @@
 	<marquee scrollamount="6" behavior="right">蓝色导航绿色无广告，近期出现无耻人渣剽窃山寨，挂病毒木马，虚假广告的假站，与本站无关。本站地址发布邮箱：6dizhi@gmail.com</marquee>
 	</div>	<div class="lyneirong">
 		<div class="info">
-			<h2>
-	<span style="color:#E53333;line-height:1.5;font-size:16px;font-weight:normal;"><strong>蓝色导航一直坚持绿色无广告，有广告的都系无耻人渣山寨，请辩明真假，避免遭受不必要的损失，本站地址发布邮箱：6dizhi@gmail.com</strong></span> 
-</h2>
 
-<p>
-	<span style="color:#EE33EE;"><br />
-</span> 
-</p>
-<p>
-	<span style="color:#EE33EE;"><br />
-</span> 
-</p>		</div>
+<div style="text-indent:2em;font-family:SimHei;font-size:16px;color:#8a69ea;">
+<strong><p>蓝色导航自建站以来一直奉行“绿色无广告,优质服务,信誉第一”的宗旨，提供最准确及时的成人站点网址资讯，赢得了不少朋友的青睐。近期个别无耻人渣居心不良，剽窃山寨本站，挂满虚假广告，内链病毒木马，钓鱼诈骗等有害信息，打着本站招牌招摇撞骗，牟取不道德私利。蓝色导航坚守绝对绿色无广告，页面内含有广告的都系山寨假站，敬请各位朋友明辨真伪，以免遭受不必要的财产和精神损失。</p>
+<p>本站地址发布邮箱：6dizhi@gmail.com</p></strong></div>
+
+<!-- 多说评论框 start -->
+	<div class="ds-thread" data-thread-key="ad" data-title="ad" data-url="ad.html"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"1588"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.unstable.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
+<!-- 多说公共JS代码 end -->
+    	</div>
 	</div>
 </div>
 <!-- 底部 -->
