--- a/index.html
+++ b/index.html
@@ -592,17 +592,20 @@
 		<strong><a name="/19/">福利导航站</a></strong>
 		<div class="linkl">
 		<ul>
-																<li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
-							<li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
+							<li><a href="http://g.my.to/" target="_blank">绿色小导航</a></li>
+                            <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
+                            <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
+                            <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
+                            <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
+                            <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
+                            <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
 							<li><a href="http://www.x5m3.com/" target="_blank">九尾狐导航</a></li>
 							<li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
 							<li><a href="http://www.wu77.info" target="_blank">银虎导航</a></li>
-							<li><a href="http://www.cooldh.com/" target="_blank">酷导航</a></li>
 							<li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
 							<li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
 							<li><a href="http://www.5av.us/" target="_blank">九福利导航</a></li>
 							<li><a href="http://av7111.com" target="_blank">老司机福利导航</a></li>
-							<li><a href="http://www.23nongfu.com" target="_blank">农夫电影导航</a></li>
 							<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
 							<li><a href="http://www.seevdo18.ga/" target="_blank">大人导航 </a></li>
 							<li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
@@ -610,11 +613,7 @@
 							<li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
 							<li><a href="http://www.zhaoavdh.com" target="_blank">找AV导航</a></li>
 							<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
-							<li><a href="http://www.kk37.com/" target="_blank">kk37导航</a></li>
 							<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
-							<li><a href="http://t66ydh.net/" target="_blank">草榴导航</a></li>
-							<li><a href="http://wcmm01.com/" target="_blank">色站大全</a></li>
-							<li><a href="http://www.69dh.top/" target="_blank">69福利导航</a></li>
 							<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
 							<li><a href="http://www.avsedh.com/" target="_blank">AV色导航</a></li>
 							<li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
