--- a/index.html
+++ b/index.html
@@ -601,7 +601,8 @@
                             <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
 							<li><a href="http://www.x5m3.com/" target="_blank">九尾狐导航</a></li>
 							<li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
-							<li><a href="http://www.wu77.info" target="_blank">银虎导航</a></li>
+							<li><a href="http://www.wu77.info/" target="_blank">银虎导航</a></li>
+                            <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
 							<li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
 							<li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
 							<li><a href="http://www.5av.us/" target="_blank">九福利导航</a></li>
