--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<marquee scrollamount="6" behavior="right">蓝色导航绿色无广告，近期出现无耻人渣剽窃山寨，挂病毒木马，虚假广告的假站，与本站无关。本站地址发布邮箱：6dizhi@gmail.com</marquee>
 	</div>												<div class="link">
 		 <div class="linka">
-		<strong><a name="/3/">综合论坛</a></strong>
+		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 220px;color:#FF9900;">蓝色导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://coat.ml" target="_blank"><span style="color:#2bf7c0;">coat.ml</span></a> <a href="http://right.gq" target="_blank"><span style="color:#2bf7c0;">right.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.dicool.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
