--- a/link.html
+++ b/link.html
@@ -14,7 +14,7 @@
 	<div class="list">
 				<strong><a href="/" target="_self"><font color="#ffffff">返回首页</font></a></strong>
 						<strong><a href="link.html" target="_self"><font color="#ffffff">新站提交</font></a></strong>
-																																																										                										<strong><a href="ad.html" target="_self"><font color="#ffffff">广告服务</font></a></strong>
+																																																										                										<strong><a href="ad.html" target="_self"><font color="#ffffff">关于本站</font></a></strong>
 												<strong><a href="notice.html" target="_self"><font color="#ffffff">网站公告</font></a></strong>
 																																																										</div>
 			<div class="gonggao">
