--- a/notice.html
+++ b/notice.html
@@ -17,7 +17,7 @@
 												<strong><a href="notice.html" target="_self"><font color="#ffffff">网站公告</font></a></strong>
 																																																										</div>
 			<div class="gonggao">
-	<marquee scrollamount="6" behavior="right">蓝色导航绿色无广告，近期出现无耻人渣剽窃山寨，挂病毒木马，虚假广告的假站，与本站无关。本站地址发布邮箱：6dizhi@gmail.com</marquee>
+	<marquee scrollamount="6" behavior="right">蓝色导航﹑蓝色小导航绿色无广告，近期出现无耻人渣剽窃山寨，挂病毒木马﹑虚假广告﹑钓鱼诈骗信息的假站，与本站无关。本站地址发布邮箱：6dizhi@gmail.com</marquee>
 	</div>	<div class="lyneirong">
 		<div class="info">
 			<p>
@@ -67,7 +67,7 @@
 																																																									<p align="center">
 	禁止未满18周岁的访客访问本站，為了你的学业与健康请勿瀏览本站<br>
 	我们立足於美利坚合眾国，对全球华人服务，受北美法律保护。未经授权禁止复製或建立镜像<br>
-	&copy; 2016 All Rights Reserved. <font color="#0080FF">蓝色导航 - 1024核工厂最新地址 - 各大网站最新地址 </font>版权所有 - <font color="#FF0000"><script language="javascript" type="text/javascript" src="http://js.users.51.la/17856605.js"></script>
+	&copy; 2016 All Rights Reserved. <font color="#0080FF">蓝色小导航 - 1024核工厂最新地址 - 各大网站最新地址 </font>版权所有 - <font color="#FF0000"><script language="javascript" type="text/javascript" src="http://js.users.51.la/17856605.js"></script>
 <noscript><a href="http://www.51.la/?17856605" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/17856605.asp" style="border:none" /></a></noscript></font><br>
 	</p>
 </div></body>
