--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<strong><a href="#/15/"><font color="#ffffff">在线工具</font></a></strong>
 			</div>
         	<div class="gonggao">
-	<marquee scrollamount="6" behavior="right">蓝色导航﹑蓝色小导航，绿色无广告，近期出现无耻人渣剽窃山寨，挂病毒木马，虚假广告的假站，与本站无关。本站地址发布邮箱：6dizhi@gmail.com</marquee>
+	<marquee scrollamount="6" behavior="right">蓝色导航﹑蓝色小导航，绿色无广告，近期出现无耻人渣剽窃山寨，挂虚假广告﹑钓鱼诈骗信息，内链病毒木马的假站，与本站无关。本站地址发布邮箱：6dizhi@gmail.com</marquee>
 	</div>												<div class="link">
 		 <div class="linka">
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 220px;color:#FF9900;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://coat.ml" target="_blank"><span style="color:#2bf7c0;">coat.ml</span></a> <a href="http://right.gq" target="_blank"><span style="color:#2bf7c0;">right.gq</span></a></strong> 
@@ -151,14 +151,13 @@
                             <li><a href="http://g.my.to/" target="_blank">绿色小导航</a></li>
                             <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
                             <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
-                            <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
+                            <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
                             <li><a href="http://www.x5m3.com/" target="_blank">九尾狐导航</a></li>
 							<li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
-							<li><a href="http://www.wu77.info/" target="_blank">银虎导航</a></li>
-                            <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
+							<li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
 							<li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
 							<li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
 							<li><a href="http://www.5av.us/" target="_blank">九福利导航</a></li>
@@ -166,7 +165,6 @@
 							<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
 							<li><a href="http://www.seevdo18.ga/" target="_blank">大人导航 </a></li>
 							<li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
-							<li><a href="http://www.5av.us/" target="_blank">九福利导航</a></li>
 							<li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
 							<li><a href="http://www.zhaoavdh.com" target="_blank">找AV导航</a></li>
 							<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
@@ -174,6 +172,7 @@
 							<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
 							<li><a href="http://www.avsedh.com/" target="_blank">AV色导航</a></li>
+                            <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
 							<li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
 				    </ul>
 		</div>
