--- a/link.html
+++ b/link.html
@@ -21,8 +21,9 @@
 	<marquee scrollamount="6" behavior="right">蓝色导航﹑蓝色小导航绿色无广告，近期出现无耻人渣剽窃山寨，挂病毒木马﹑虚假广告﹑钓鱼诈骗信息的假站，与本站无关。本站地址发布邮箱：6dizhi@gmail.com</marquee>
 	</div>    
     
+ 	    <div class="link">
     <div class="lyneirong">
-	    <div class="navlink">
+
 
 <div style="text-align:center;font-family:SimHei;font-size:16px;color:#8a69ea;"><strong>
 <p>有好的建议或者意见﹑想法，大家可以在这里畅所欲言</p>
