--- a/notice.html
+++ b/notice.html
@@ -18,8 +18,10 @@
 																																																										</div>
 			<div class="gonggao">
 	<marquee scrollamount="6" behavior="right">蓝色导航﹑蓝色小导航绿色无广告，近期出现无耻人渣剽窃山寨，挂病毒木马﹑虚假广告﹑钓鱼诈骗信息的假站，与本站无关。本站地址发布邮箱：6dizhi@gmail.com</marquee>
-	</div>	<div class="lyneirong">
-		<div class="info">
+	</div> 	    
+    
+    <div class="link">
+    <div class="lyneirong">
 			<p>
 	2016/10/01：网站新界面，增加分类页，首页各分类加载所在分类部分网站（提升速度），
 </p>
