--- a/link.html
+++ b/link.html
@@ -18,7 +18,7 @@
 												<strong><a href="notice.html" target="_self"><font color="#ffffff">网站公告</font></a></strong>
 																																																										</div>
 			<div class="gonggao">
-	<marquee scrollamount="6" behavior="right">蓝色导航﹑蓝色小导航绿色无广告，近期出现无耻人渣剽窃山寨，挂病毒木马﹑虚假广告﹑钓鱼诈骗信息的假站，与本站无关。本站地址发布邮箱：6dizhi@gmail.com</marquee>
+<marquee scrollamount=6 FONT style="COLOR=FF0000; FILTER: shadow(color=FFFF33 ); font-family:KaiTi; FONT-SIZE:11pt; WIDTH: 100%">蓝色导航﹑蓝色小导航，绿色无广告，近期出现无耻人渣剽窃山寨，挂虚假广告﹑钓鱼诈骗信息，内链病毒木马的假站，与本站无关。</marquee>
 	</div>    
     
  	    <div class="link">
