--- a/ad.html
+++ b/ad.html
@@ -24,7 +24,7 @@
     <div class="lyneirong">
 
 <div style="text-indent:2em;font-family:SimHei;font-size:16px;color:#8a69ea;">
-<strong><p>蓝色导航自建站以来一直奉行“绿色无广告,优质服务,信誉第一”的宗旨，提供最准确及时的成人站点网址资讯，赢得了不少朋友的青睐。近期个别无耻人渣居心不良，剽窃山寨本站，挂满虚假广告，内链病毒木马﹑钓鱼诈骗等有害信息，打着本站招牌招摇撞骗，牟取不道德私利。蓝色导航坚守绝对绿色无广告，页面内含有广告的都系山寨假站，敬请各位朋友明辨真伪，以免遭受不必要的财产和精神损失。</p>
+<strong><p>蓝色导航建站2年多以来一直奉行“绿色无广告,优质服务,信誉第一”的宗旨，提供最准确及时的成人站点网址资讯，赢得了不少朋友的青睐。近期个别无耻人渣居心不良，剽窃山寨本站，挂满虚假广告，内链病毒木马﹑钓鱼诈骗等有害信息，打着本站招牌招摇撞骗，牟取不道德私利。蓝色导航坚守绝对绿色无广告，页面内含有广告的都系山寨假站，敬请各位朋友明辨真伪，以免遭受不必要的财产和精神损失。</p>
 <p>本站地址发布邮箱：6dizhi@gmail.com</p></strong></div>
 
 <!-- 多说评论框 start -->
