--- a/notice.html
+++ b/notice.html
@@ -22,41 +22,19 @@
     
     <div class="link">
     <div class="lyneirong">
-			<p>
-	2016/10/01：网站新界面，增加分类页，首页各分类加载所在分类部分网站（提升速度），
-</p>
-<p>
-	当前所在分类加载全部已收录网站，优化PC版CSS，支持IE浏览器内核，提高IE内核用户体验。
-</p>
-<p>
-	<br />
-</p>
-<p>
-	2016/09/25 ：优化模板，清楚部分css残渣，更新手机版页面。
-</p>
-<p>
-	<br />
-</p>
-<p>
-	2016/09/22 ：底部增加360网站安全检测，可随时查看本站是否安全。
-</p>
-<p>
-	<br />
-</p>
-<p>
-	2016/09/20 ：更新关于本站。
-</p>
-<p>
-	<br />
-</p>
-<p>
-	2016/09/18 ：更新部分失效地址。
-</p>
-<p>
-	<br />
-</p>		</div>
-	</div>
+    
+<div style="text-indent:2em;font-family:SimHei;font-size:16px;color:#8a69ea;"><strong>
+<p>2016/09/20 ：本站被无耻人渣山寨剽窃</p>
+<p>2016/09/18 ：优化模板，浏览更便利快捷。</p>
+<p>2016/03/08 ：因应需求，增加动漫ACG分类</p>
+<p>2015/12/18 ：精细分类，增加信息交友分类</p>
+<p>2015/09/18 ：精细分类，增加特色好站分类</p>
+<p>2014/07/28 ：蓝色导航建立，旨在为广大成人们提供一个绿色无广告，准确展示各类成人站点资讯的平台</p>
+</strong></div>		
 </div>
+</div>
+</div>
+
 <!-- 底部 -->
 <div class="footer">
 <div style="right:0;bottom:0;height:150px;width:98px;POSITION:fixed;">
