--- a/notice.html
+++ b/notice.html
@@ -24,12 +24,13 @@
     <div class="lyneirong">
     
 <div style="text-indent:2em;font-family:SimHei;font-size:16px;color:#8a69ea;"><strong>
-<p>2016/09/20 ：本站被无耻人渣山寨剽窃</p>
+<p>2016/10/02 ：推出地址发布邮箱</p>
+<p>2016/09/20 ：出现无耻人渣剽窃山寨，挂满虚假广告﹑病毒木马﹑钓鱼诈骗信息的假蓝色导航网站</p>
 <p>2016/09/18 ：优化模板，浏览更便利快捷。</p>
 <p>2016/03/08 ：因应需求，增加动漫ACG分类</p>
 <p>2015/12/18 ：精细分类，增加信息交友分类</p>
 <p>2015/09/18 ：精细分类，增加特色好站分类</p>
-<p>2014/07/28 ：蓝色导航建立，旨在为广大成人们提供一个绿色无广告，准确展示各类成人站点资讯的平台</p>
+<p>2014/07/28 ：蓝色导航建立，旨在为广大成人们提供一个绿色无广告，准确展示各类成人站点网址资讯的平台</p>
 </strong></div>		
 </div>
 </div>
