--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <li><a href="http://bbs.6park.com/classbk" target="_blank">留园经典书库</a></li>
 <li><a href="http://www.dushang99.info/" target="_blank">杜尚论坛</a></li>
 <li><a href="http://mtl6.xyz/" target="_blank">摩天轮社区</a></li>
-<li><a href="http://184.164.72.143/index.php?fromuid=282768" target="_blank">黑暗圣殿</a></li>
+<li><a href="http://heian.me/index.php?fromuid=282768" target="_blank">黑暗圣殿</a></li>
 <li><a href="http://6ppp6.club/" target="_blank">涩啪啪</a></li>
 <li><a href="http://theporndude.com/" target="_blank">The Porn Dude</a></li>
 <li><a href="http://namethatporn.com/" target="_blank">NameThatPorn</a></li>
@@ -147,15 +147,17 @@
 		<strong><a name="/4/">导航网站</a></strong><a href="https://about.me/dizhi" style="text-decoration: none" target="_blank"><strong style="padding:0 185px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">发送任意邮件到<font color="#7CFC00">dizhi66@gmail.com</font>，自动回复蓝色小导航最新地址</strong></a>
 		<div class="linkl">
 		<ul>
-							<li><a href="http://d.officeblog.jp/" target="_blank">蓝色导航</a></li>
-                            <li><a href="http://g.my.to/" target="_blank">绿色小导航</a></li>
+							<li><a href="http://boat.ml/" target="_blank">蓝色导航</a></li>
+                            <li><a href="http://1025.cf/" target="_blank">绿色小导航</a></li>
                             <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
                             <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
-                            <li><a href="http://www.zhaoavdh.com" target="_blank">找AV导航</a></li>
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
+                            <li><a href="http://www.zhaoavdh.com" target="_blank">找AV导航</a></li>
+                            <li><a href="http://www.soavdh.com/" target="_blank">搜AV导航</a></li>
+                            <li><a href="http://www.52shl.xyz/" target="_blank">福利射导航</a></li>
                             <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
                             <li><a href="http://www.x5m3.com/" target="_blank">九尾狐导航</a></li>
 							<li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
@@ -164,8 +166,6 @@
 							<li><a href="http://www.5av.us/" target="_blank">九福利导航</a></li>
 							<li><a href="http://av7111.com" target="_blank">老司机福利导航</a></li>
 							<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
-							<li><a href="http://www.seevdo18.ga/" target="_blank">大人导航 </a></li>
-							<li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
 							<li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
 							<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
 							<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
@@ -173,6 +173,7 @@
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
 							<li><a href="http://www.avsedh.com/" target="_blank">AV色导航</a></li>
                             <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
+                            <li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
 							<li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
 				    </ul>
 		</div>
@@ -365,12 +366,12 @@
 <li><a href="http://iywzd.net/bbs/?fromuid=574073" target="_blank">欲望都市</a></li>
 <li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
 <li><a href="http://192.161.172.130/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
+<li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://xftec.com/forum.php?x=2122570" target="_blank">夫妻吧</a></li>
 <li><a href="http://www.137992.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://184.164.72.138/?fromuid=678142" target="_blank">逍遥游</a></li>
-<li><a href="http://www.cqheixiu.info/?fromuid=51281" target="_blank">全城嘿咻</a></li>
-<li><a href="http://www.xyj2015.com/?fromuid=118049" target="_blank">西友记</a></li>
-<li><a href="http://www.lf3w.com/?fromuid=10016069" target="_blank">性息村</a></li>
+<li><a href="http://www.cqhx.info/?fromuid=51281" target="_blank">全城嘿咻</a></li>
+<li><a href="http://www.xyj2014.com/?fromuid=118049" target="_blank">西友记</a></li>
 <li><a href="http://192.161.172.132/?u=465979" target="_blank">买春堂</a></li>
 <li><a href="http://184.164.72.170/?u=430488" target="_blank">红河谷</a></li>
 <li><a href="http://www.2ni.me/" target="_blank">恋恋影视</a></li>
@@ -395,9 +396,9 @@
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://10086.pw/?fromuid=1539" target="_blank">找福利网论坛</a></li>
 <li><a href="http://yidoubi.com/" target="_blank">一逗比</a></li>
+<li><a href="http://52shl.xyz/" target="_blank">福利射</a></li>
 <li><a href="http://zhainw.com/" target="_blank">宅男网</a></li>
 <li><a href="https://www.sijihuisuo.club/" target="_blank">司机会所</a></li>
-<li><a href="http://www.sinyuwang.com/" target="_blank">杏娱网</a></li>
 <li><a href="http://www.puahome.com/" target="_blank">坏男孩</a></li>
 <li><a href="http://lieqizhijia.com/" target="_blank">猎奇之家</a></li>
 <li><a href="http://www.bocaishequ.cn/?u=4509" target="_blank">菠菜社区</a></li>
