--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <marquee scrollamount=6 FONT style="COLOR=FF0000; FILTER: shadow(color=FFFF33 ); font-family:KaiTi; FONT-SIZE:11pt; WIDTH: 100%">蓝色导航﹑蓝色小导航，绿色无广告，近期出现无耻人渣剽窃山寨，挂虚假广告﹑钓鱼诈骗信息，内链病毒木马的假站，与本站无关。</marquee>
 	</div>												<div class="link">
 		 <div class="linka">
-		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://coat.ml" target="_blank"><span style="color:#2bf7c0;">coat.ml</span></a> <a href="http://right.gq" target="_blank"><span style="color:#2bf7c0;">right.gq</span></a></strong> 
+		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://party.gq" target="_blank"><span style="color:#2bf7c0;">party.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.dicool.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
