--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		<strong><a name="/4/">导航网站</a></strong><a href="https://about.me/dizhi" style="text-decoration: none" target="_blank"><strong style="padding:0 185px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">发送任意邮件到<font color="#7CFC00">dizhi66@gmail.com</font>，自动回复蓝色小导航最新地址</strong></a>
 		<div class="linkl">
 		<ul>
-							<li><a href="http://boat.ml/" target="_blank">蓝色导航</a></li>
+							<li><a href="http://d.officeblog.jp/" target="_blank">蓝色导航</a></li>
                             <li><a href="http://1025.cf/" target="_blank">绿色小导航</a></li>
                             <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
                             <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
