--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
                             <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
                             <li><a href="http://www.zhaoavdh.com" target="_blank">找AV导航</a></li>
                             <li><a href="http://www.soavdh.com/" target="_blank">搜AV导航</a></li>
+                            <li><a href="http://a4v5.net/" target="_blank">良友导航</a></li>
+                            <li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
                             <li><a href="http://www.52shl.xyz/" target="_blank">福利射导航</a></li>
                             <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
                             <li><a href="http://www.x5m3.com/" target="_blank">九尾狐导航</a></li>
