--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
 <li><a href="http://62.210.209.113/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
+<li><a href="http://dear.gq/" target="_blank">蓝色小导航</a></li>
 <li><a href="http://www.hdp2p.net/" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://avnrw.com/" target="_blank">AV男人网</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
+<li><a href="http://97kaixin.com/" target="_blank">97开心</a></li>
+<li><a href="http://www.gaohaolu.ml/" target="_blank">高好撸</a></li>
 <li><a href="http://www.laikanmei.top/" target="_blank">来看妹论坛</a></li>
 <li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://www.18p2p.com/forum/index.php" target="_blank">18p2p</a></li>
@@ -91,6 +94,8 @@
 <li><a href="http://www.dushang99.info/" target="_blank">杜尚论坛</a></li>
 <li><a href="http://mtl6.xyz/" target="_blank">摩天轮社区</a></li>
 <li><a href="http://6ppp6.club/" target="_blank">涩啪啪</a></li>
+<li><a href="http://www.share1234.com/" target="_blank">火热分享</a></li>
+<li><a href="http://204.152.220.41/index.php?fromuid=282768" target="_blank">黑暗圣殿</a></li>
 <li><a href="http://theporndude.com/" target="_blank">The Porn Dude</a></li>
 <li><a href="http://namethatporn.com/" target="_blank">NameThatPorn</a></li>
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
@@ -129,6 +134,7 @@
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://www.ilbeya5.com/" target="_blank">ilbeya5</a></li>
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
+<li><a href="http://www.caobike.com/" target="_blank">草比克在线</a></li>
 <li><a href="http://www.amay.tv/forum.php" target="_blank">阿玫圖庫</a></li>
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
@@ -139,6 +145,7 @@
 <li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
 <li><a href="http://cl.oaiyr.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://c6.jekr.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
+<li><a href="http://cl.gfhyu.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -194,9 +201,10 @@
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.yyaiav.com/" target="_blank">夜夜爱AV</a></li>
+<li><a href="http://www.av1800.com/" target="_blank">善解人衣在线</a></li>
+<li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://v2momo.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8spad.com/" target="_blank">D8视频</a></li>
-<li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://www.56avs.com/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
@@ -204,6 +212,7 @@
 <li><a href="http://www.lyfav.com/" target="_blank">撸一发av</a></li>
 <li><a href="http://avlu99.com/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
+<li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://www.bensexo.com/" target="_blank">本色视频</a></li>
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
@@ -212,8 +221,8 @@
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
 <li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
+<li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
 <li><a href="http://www.rq66.info/" target="_blank">人妻视频</a></li>
-<li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.avtb7.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://video169.com/" target="_blank">Sex169影城</a></li>
@@ -225,18 +234,23 @@
 <li><a href="http://didimeimei.top/cao" target="_blank">CaoPorn</a></li>
 <li><a href="http://www.avaotu.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
+<li><a href="http://hhs03.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.zz1200.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
 <li><a href="http://aishangvideo.com/" target="_blank">爱上视频</a></li>
+<li><a href="http://www.zz1200.com/" target="_blank">caob</a></li>
+<li><a href="http://www.zz1200.com/" target="_blank">gaob</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
 <li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
-<li><a href="https://www.w832.com/" target="_blank">202z</a></li>
+<li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
+<li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="http://www.avtai.org/" target="_blank">AvTai</a></li>
 <li><a href="http://ixxzy.com/" target="_blank">ixxzy</a></li>
 <li><a href="http://www.youb77.com/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.av8d.co/" target="_blank">琪琪涩原</a></li>
+<li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
 <li><a href="http://www.jiuseteng.net/" target="_blank">九涩腾</a></li>
 <li><a href="http://www.jav2be.com/" target="_blank">绝色媚影</a></li>
 <li><a href="http://www.jav513.com/" target="_blank">宅男频道</a></li>
@@ -389,10 +403,10 @@
 <li><a href="http://iywzd.net/bbs/?fromuid=574073" target="_blank">欲望都市</a></li>
 <li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
 <li><a href="http://192.161.172.130/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
-<li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
+<li><a href="http://sezhan.net/" target="_blank">微拍视频</a></li>
 <li><a href="http://www.weipaiwang.cc/" target="_blank">微拍网</a></li>
 <li><a href="http://52weipai.net/" target="_blank">我爱微拍网</a></li>
-<li><a href="http://sezhan.net/" target="_blank">微拍视频</a></li>
+<li><a href="http://www.98zhubo.com/?fromuid=53" target="_blank">98主播网</a></li>
 <li><a href="http://xftec.com/forum.php?x=2122570" target="_blank">夫妻吧</a></li>
 <li><a href="http://www.137992.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://184.164.72.138/?fromuid=678142" target="_blank">逍遥游</a></li>
