--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                             <li><a href="http://www.zhaoavdh.com" target="_blank">找AV导航</a></li>
                             <li><a href="http://www.soavdh.com/" target="_blank">搜AV导航</a></li>
                             <li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
+                            <li><a href="http://www.avsedh.net/" target="_blank">AV色导航</a></li>
                             <li><a href="http://a4v5.net/" target="_blank">良友导航</a></li>
                             <li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
                             <li><a href="http://www.52shl.xyz/" target="_blank">福利射导航</a></li>
@@ -172,7 +173,6 @@
 							<li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
 							<li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
 							<li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
-							<li><a href="http://www.5av.us/" target="_blank">九福利导航</a></li>
 							<li><a href="http://av7111.com" target="_blank">老司机福利导航</a></li>
 							<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
 							<li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
@@ -180,7 +180,6 @@
 							<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
 							<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
-							<li><a href="http://www.avsedh.com/" target="_blank">AV色导航</a></li>
                             <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
                             <li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
 							<li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
@@ -238,8 +237,8 @@
 <li><a href="http://www.zz1200.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
 <li><a href="http://aishangvideo.com/" target="_blank">爱上视频</a></li>
-<li><a href="http://www.zz1200.com/" target="_blank">caob</a></li>
-<li><a href="http://www.zz1200.com/" target="_blank">gaob</a></li>
+<li><a href="http://caob002.com/" target="_blank">caob</a></li>
+<li><a href="http://gaob003.com/" target="_blank">gaob</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
 <li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
